--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Bahjat Kawar</title>
+<title>Kassy Chen</title>
 <meta name="google-site-verification" content="QjLkUt7GRHvXWyLqRw7NZ7MW0-3BEg5TfF4bl-kxZB0" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -171,7 +171,7 @@ function show_menu() {
         student at BNDS <br />
         Interested in everything. <br />
         <a class="lnk" href="https://kassychen.blog.caixin.com">Blog</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        
+
     </center>
     <br /><br />
     <div style="position:relative;height:140px;" id="banner-div">
